Update and rename IndexKu.html to index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 	 <!-- Подключаем плагин leaflet-search -->
 	 <link rel="stylesheet" href="https://unpkg.com/leaflet-search/dist/leaflet-search.min.css" />
 	 <script src="https://unpkg.com/leaflet-search/dist/leaflet-search.min.js"></script>   
+
+	    <!-- Подключаем файл CSS со стилями -->
+	  <link rel="stylesheet" href="style.css">
 	</head>
    
     <body>
@@ -79,4 +82,5 @@
 	  <script src="script.js"></script>
 	  
    </body>
+
 </html>
